2002-10-23  Eric Schabell <eschabell@sourcmage.org>

		fixed bug #1057, added POST_REMOVE and added
		tracking of symlink installs, also chk's for
		existing links.

2002-07-09  Jeff Schmidt <jschmidt@fnal.gov>

		added LICENSE, removed USEGCC2
