@@ -9,7 +9,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION.orig
   SOURCE2_URL[0]=ftp://security.debian.org/debian-security/dists/potato/updates/main/source/$SOURCE2
         WEB_SITE=unknown
          ENTERED=20011011
-         UPDATED=20020118
+         UPDATED=20021117
          LICENSE=GPL
            SHORT="at/batch is a periodic scheduler."
 cat << EOF
