@@ -1,3 +1,5 @@
+2002-11-17  Neal Birch <nealbirch@attbi.com>
+	    Added functions capable script.
 2002-10-23  Eric Schabell <eschabell@sourcmage.org>
 
 		fixed bug #1057, added POST_REMOVE and added
